--- a/Project/index.html
+++ b/Project/index.html
@@ -16,7 +16,9 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/colorbrewer.css">
-         <link rel="stylesheet" href="css/likert.css">
+        <link rel="stylesheet" href="css/likert.css">
+        <link rel="stylesheet" href="css/cube.css">
+
 
         <!--modules css-->
         <link rel="stylesheet" href="css/sp.css">
@@ -208,16 +210,20 @@
                 </div>
                 <div class="grid">
                      <div class="row">
-                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6" id="sp" style="height: 400"></div>
+                        <div class="pull-left">
+                            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12" id="sp" style="height: 400"></div>
+                            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12" id="cubeDivID" style="height: 400, width:500">
+                        </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12" id="display-likert-chart" style="height: 200, width:500"></div>
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="display-likert-chart" style="height: 200, width:400">
+                        </div>
                     </div>
+                    <!-- <div class="row">
+                        <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12" id="cubeID"></div>
+                        
+                    </div> -->
                 </div>
-
-
-
-              
 
 
               <!--  <div class="col-md-6" id="area" style="height: 40vh"></div>
@@ -229,7 +235,7 @@
 
         </div>
 
-        <<!-- div id="footer">
+        <!-- div id="footer">
             <div class="container">
             </div>
         </div> -->
@@ -240,7 +246,8 @@
         <script src="js/plugins.js"></script>
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
         <script src="js/vendor/d3.v3.js"></script>
-        <!--<script src="js/vendor/d3.v3.min.js"></script>-->
+        <script src="js/vendor/d3.v3.min.js"></script>
+        <script src="js/vendor/three.min.js"></script>
         <script src="js/vendor/underscore-min.js"></script>
         <script src="js/vendor/colorbrewer.js"></script>
         <script src="js/vendor/moment.min.js"></script>
@@ -251,6 +258,7 @@
         <script src="js/kmeans.js"></script>
         <script src="js/sp.js"></script>
         <script src="js/likert.js"></script>
+        <script src="js/cube.js"></script>
 
     </body>
 </html>
