add brush method for time filtering
brush selection in lower scatter plot to allow time filtering in both
(min and max) directions.
adapt all other charts to the changes so the brush selection filters
the dots in the other charts as well

--- a/Project/index.html
+++ b/Project/index.html
@@ -193,12 +193,12 @@
                                 </label>
                             </div>
 
-                            <div>Timestamp
+                           <!--  <div>Timestamp
                             <br>
                               <p id="timeStartID" style="display:inline" > start </p>
                               <input type="range" min="0" max="1" id="slider">
                               <p id="timeEndID" style="display:inline"> end </p>
-                            </div>
+                            </div> -->
                             <!-- <button type="button" class="btn btn-default btn-sm" id="resetBtnID" onclick="resetSelection()">Reset</button>
                           -->
                             <!-- <button type="button" class="btn btn-default btn-sm" id="resetTimeBtnID" onclick="resetTime()">Reset time selection</button>
@@ -252,6 +252,7 @@
         <script src="js/vendor/colorbrewer.js"></script>
         <script src="js/vendor/moment.min.js"></script>
         <script src="js/vendor/d3.likert.js"></script>
+        <script src="js/vendor/hammer.min.js"></script>
 
         <!--modules js-->
         <script src="js/main.js"></script>
