--- a/Project/index.html
+++ b/Project/index.html
@@ -87,14 +87,14 @@
                                     <input type="radio" name="TypeSelection" id="movementID" value="movement">movement
                                 </label>
                             </div>
-                             <div id="singleIDdiv" style="display: none;">
+                             <!-- <div id="singleIDdiv" style="display: none;">
                                     <div class="form-group">
                                         <label for="idSelection">ID:</label>
                                     <select id= "IDselectionID" name="IDselection">
                                       <option></option>
                                     </select>
                                     </div>
-                                </div>
+                                </div> -->
                             <br>
                             <div class="form-group" >
                                 <label for="IDselection">IDs:</label>
