change initial selection for sampling parameter

--- a/Project/index.html
+++ b/Project/index.html
@@ -79,10 +79,10 @@
                              <div class="form-group" >
                                 <label for="sampling">Sampling:</label>
                                 <label class="radio-inline">
-                                    <input type="radio" name="sampling" id="noSamplingID" value="no" onclick="samplingClick()">no
+                                    <input type="radio" name="sampling" id="noSamplingID" value="no" onclick="samplingClick()" checked>no
                                 </label>
                                 <label class="radio-inline">
-                                    <input type="radio" name="sampling" id="samplingID" value="yes" onclick="samplingClick()" checked>yes
+                                    <input type="radio" name="sampling" id="samplingID" value="yes" onclick="samplingClick()">yes
                                 </label>      
                             </div>
                              <div id="samplingRateID" style="display: none;">
@@ -150,7 +150,7 @@
                      <div class="row">
                         <div class="pull-left">
                             <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12" id="sp" style="height: 400"></div>
-                            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12" id="cubeDivID" style="height: 400, width:500">
+                            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12" id="cubeDivID" style="height: 400, width:500"></div>
                         </div>
                     </div>
                     <div class="row">
